# askr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MISSING_FEATURES.md  Makefile  README.md  test_line_editing.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
completions/: askr.bash  askr.fish  askr.ps1  askr.zsh
examples/: advanced_validation.sh  basic_usage.sh  scripting.sh
spec/: cli-interface.md  implementation-notes.md  output-formats.md  overview.md  ui-behavior.md  validation-system.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  config.rs  mod.rs
src/input/: interactive.rs  mod.rs  processor.rs  stdin.rs
src/output/: default.rs  json.rs  mod.rs  raw.rs
src/ui/: choice_menu.rs  colors.rs  interactive.rs  layout.rs  mod.rs  quiet.rs  terminal.rs
src/validation/: engine.rs  mod.rs  priority.rs  result.rs
src/validation/rules/: basic.rs  choice.rs  datetime.rs  filesystem.rs  format.rs  mod.rs  numeric.rs
tests/: integration_tests.rs
