[package]
name = "prompt"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI prompt tool with real-time validation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/prompt"
keywords = ["cli", "prompt", "validation", "interactive", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "prompt"
path = "src/main.rs"

[lib]
name = "prompt"
path = "src/lib.rs"

[dependencies]
# Terminal control and UI
crossterm = "0.27"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Serialization for JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time validation
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.10"

# Error handling
thiserror = "1.0"

# Performance and concurrency
once_cell = "1.19"
dashmap = "5.5"

# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.10"
