[package]
name = "askr"
version = "0.1.6"
edition = "2021"
rust-version = "1.74.0"
description = "Interactive CLI input tool with real-time validation and choice menus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gfranxman/askr"
homepage = "https://github.com/gfranxman/askr"
documentation = "https://docs.rs/askr"
readme = "README.md"
authors = ["Glenn Franxman <gfranxman@example.com>"]
keywords = ["cli", "input", "validation", "interactive", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "askr"
path = "src/main.rs"

[lib]
name = "askr"
path = "src/lib.rs"

[dependencies]
# Terminal control and UI
crossterm = "0.27"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Serialization for JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time validation
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.10"

# Error handling
thiserror = "1.0"

# Performance and concurrency
once_cell = "1.19"
dashmap = "5.5"

# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.10"
